# Box-term

./: .gitmodules  LICENSE  README.md
.github/workflows/: android-debug.yml
Android/src/termux-app/app/: build.gradle.kts
src/: gradle.properties  settings.gradle.kts
src/app/: build.gradle.kts
src/app/src/main/: AndroidManifest.xml
src/app/src/main/assets/: model_allowlist.json
src/app/src/main/assets/skills/budget-tracker/: SKILL.md
src/app/src/main/assets/skills/budget-tracker/assets/: dashboard.html
src/app/src/main/assets/skills/budget-tracker/scripts/: index.html
src/app/src/main/assets/skills/calculate-hash/: SKILL.md
src/app/src/main/assets/skills/calculate-hash/scripts/: index.js
src/app/src/main/assets/skills/password-generator/: SKILL.md
src/app/src/main/assets/skills/password-generator/assets/: display.html
src/app/src/main/assets/skills/password-generator/scripts/: index.html
src/app/src/main/assets/skills/qr-code/scripts/: index.html
src/app/src/main/assets/skills/translator/: SKILL.md
src/app/src/main/assets/skills/translator/assets/: display.html
src/app/src/main/assets/skills/translator/scripts/: index.html
src/app/src/main/java/com/box/gallery/: GalleryApplication.kt
src/app/src/main/java/com/google/ai/edge/gallery/: Analytics.kt  FcmMessagingService.kt  GalleryAppTopBar.kt
src/app/src/main/java/com/google/ai/edge/gallery/customtasks/agentchat/: AgentChatScreen.kt  SkillManagerViewModel.kt
src/app/src/main/java/com/google/ai/edge/gallery/customtasks/common/: CustomTaskData.kt
src/app/src/main/java/com/google/ai/edge/gallery/customtasks/mobileactions/: Actions.kt  MobileActionsScreen.kt  MobileActionsTools.kt  MobileActionsViewModel.kt
src/app/src/main/java/com/google/ai/edge/gallery/customtasks/tinygarden/: TinyGardenTaskModule.kt
src/app/src/main/java/com/google/ai/edge/gallery/data/: Categories.kt  Model.kt  ModelAllowlist.kt  Tasks.kt
src/app/src/main/java/com/google/ai/edge/gallery/data/local/: BoxChatDatabase.kt  ChatRepository.kt
src/app/src/main/java/com/google/ai/edge/gallery/data/local/dao/: ConversationDao.kt  MessageDao.kt
src/app/src/main/java/com/google/ai/edge/gallery/data/local/entities/: Conversation.kt  Message.kt
src/app/src/main/java/com/google/ai/edge/gallery/di/: DatabaseModule.kt
src/app/src/main/java/com/google/ai/edge/gallery/engine/: InferenceEngineType.kt  LlamaCppEngine.kt
src/app/src/main/java/com/google/ai/edge/gallery/runtime/: LlamaCppModelHelper.kt  ModelHelperExt.kt
src/app/src/main/java/com/google/ai/edge/gallery/security/: AppLockManager.kt  BiometricEncryptionManager.kt  BiometricHelper.kt  OfflineMode.kt  PassphraseHolder.kt  SecurityAuditLog.kt  SecurityUtils.kt
src/app/src/main/java/com/google/ai/edge/gallery/ui/common/: ConfigDialog.kt  DownloadAndTryButton.kt  ModelPageAppBar.kt  ModelPicker.kt
src/app/src/main/java/com/google/ai/edge/gallery/ui/common/chat/: ChatPanel.kt  ChatView.kt  ChatViewModel.kt  MessageInputText.kt
src/app/src/main/java/com/google/ai/edge/gallery/ui/common/tos/: TosViewModel.kt
src/app/src/main/java/com/google/ai/edge/gallery/ui/home/: ChatHistoryScreen.kt  ChatHistoryViewModel.kt  HomeScreen.kt  PromoScreenGm4.kt  SettingsDialog.kt
src/app/src/main/java/com/google/ai/edge/gallery/ui/imagegen/: ImageGenScreen.kt  ImageGenTaskModule.kt  ImageGenViewModel.kt
src/app/src/main/java/com/google/ai/edge/gallery/ui/llmchat/: LlmChatModelHelper.kt  LlmChatScreen.kt  LlmChatTaskModule.kt  LlmChatViewModel.kt
src/app/src/main/java/com/google/ai/edge/gallery/ui/modelmanager/: GlobalModelManager.kt  ModelImportDialog.kt  ModelManagerViewModel.kt  PromoBannerGm4.kt
src/app/src/main/java/com/google/ai/edge/gallery/ui/navigation/: GalleryNavGraph.kt
src/app/src/main/java/com/google/ai/edge/gallery/ui/splash/: BoxSplashScreen.kt
src/app/src/main/java/com/google/ai/edge/gallery/ui/theme/: Color.kt  Theme.kt
src/app/src/main/java/com/google/ai/edge/gallery/ui/whisper/: WhisperScreen.kt  WhisperTaskModule.kt  WhisperViewModel.kt
src/app/src/main/java/com/google/ai/edge/gallery/worker/: AndroidManifest.xml  DownloadWorker.kt
src/app/src/main/res/drawable/: bg_star.xml  ic_app_icon_foreground.xml  ic_box_foreground.xml  ic_launcher_background.xml  ic_launcher_foreground.xml  splash_screen_animated_icon.xml
src/app/src/main/res/values/: ic_launcher_background.xml  strings.xml  themes.xml
src/app/src/main/res/xml/: network_security_config.xml
src/gradle/: gradle-daemon-jvm.properties  libs.versions.toml
src/smollm/: build.gradle.kts  consumer-rules.pro  proguard-rules.pro
src/smollm/src/main/cpp/: CMakeLists.txt  GGUFReader.cpp  LLMInference.cpp  LLMInference.h  smollm.cpp
src/smollm/src/main/java/com/jegly/offlineLLM/smollm/: GGUFReader.kt  SmolLM.kt
src/stablediffusion/: build.gradle.kts
src/stablediffusion/src/main/cpp/: CMakeLists.txt  SDInference.cpp
src/stablediffusion/src/main/java/com/google/ai/edge/gallery/stablediffusion/: StableDiffusion.kt
src/termux-app/app/: build.gradle.kts
src/whisper/: build.gradle.kts
src/whisper/src/main/: AndroidManifest.xml
src/whisper/src/main/cpp/: CMakeLists.txt  WhisperInference.cpp
src/whisper/src/main/java/com/google/ai/edge/gallery/whisper/: WhisperEngine.kt
